create doc for register
